crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_supplementary_string_literal_content.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"\uD835\uDC82"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StringLiteral "\"\\uD835\\uDC82\"" @ 0..14
  Eof "" @ 14..14

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..14 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(14) }) message=unexpected token at top level
