crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_template_embedded_expression_escape_01.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"Hello \{name}"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StringLiteral "\"Hello \\{name}\"" @ 0..15
  Eof "" @ 15..15

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..15 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(15) }) message=unexpected token at top level
