crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_character_literals_with_multiple_utf16_code_units_02.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'\uD835\uDC82'

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      CharacterLiteral "'\\uD835\\uDC82'" @ 0..14
  Eof "" @ 14..14

diagnostics:
  code=java.lex.invalid_character_literal severity=Error stage=Lexer range=0..14 message="invalid character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..14 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(14) }) message=invalid character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(14) }) message=unexpected token at top level
