crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_empty_and_multi_character_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'' 'ab'

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      CharacterLiteral "''" @ 0..2 trailing=[Whitespace " "]
      CharacterLiteral "'ab'" @ 3..7
  Eof "" @ 7..7

diagnostics:
  code=java.lex.invalid_character_literal severity=Error stage=Lexer range=0..2 message="invalid character literal"
  code=java.lex.invalid_character_literal severity=Error stage=Lexer range=3..7 message="invalid character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=invalid character literal
code=java.lex.invalid_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(3), end: TextSize(7) }) message=invalid character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
