crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__rejects_line_continuation_escape_in_character_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'\
'

syntax:
syntax:
CompilationUnit
  ErrorNode
    CharacterLiteral "'\\" @ 0..2
    CharacterLiteral "'" @ 3..4 leading=[Newline "\n"]
  Eof "" @ 4..4

diagnostics:
  code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=2..3 message="invalid escape sequence"
  code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=0..2 message="unterminated character literal"
  code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=3..4 message="unterminated character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_escape_sequence severity=Error stage=Lexer range=Some(TextRange { start: TextSize(2), end: TextSize(3) }) message=invalid escape sequence
code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unterminated character literal
code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(3), end: TextSize(4) }) message=unterminated character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
